fixing header overlapping

--- a/apps/fe-commerce/src/app/modules/main/shared/components/main-header/main-header.component.scss
+++ b/apps/fe-commerce/src/app/modules/main/shared/components/main-header/main-header.component.scss
@@ -12,6 +12,7 @@
   flex-flow: row wrap;
   justify-content: flex-start;
   align-items: center;
+  z-index: 1;
 
   .left-icon {
     height: 28px;
