--- a/apps/fe-commerce/src/assets/styles/_global.scss
+++ b/apps/fe-commerce/src/assets/styles/_global.scss
@@ -5,6 +5,7 @@ main {
   flex-direction: column;
   justify-content: stretch;
   align-items: stretch;
+  height: 100%;
   top: -1px;
 
   .scrollable-container {
